--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Title -->
-    <title>Kiosk Bike - Multi-purpose E-commerce Html5 Template</title>
+    <title>Anzen Suzuki</title>
 
     <!-- Favicon Icon -->
     <link rel="shortcut icon" type="image/x-icon" href="./assets/images/favicon.png">
