--- a/shop.html
+++ b/shop.html
@@ -206,7 +206,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/vstrom-sx.html">
                                         <img src="./assets/images/product/motorcycles/suzuki-sx.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -218,7 +218,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                            href="shop-single.html">
+                                            href="./assets/pages/vstrom-sx.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -230,7 +230,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Vstrom SX</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/vstrom-sx.html">Vstrom SX</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -241,7 +241,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-sf-150.html">
                                         <img src="./assets/images/product/motorcycles/gixxer-sf-150.webp" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -253,7 +253,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                            href="shop-single.html">
+                                            href="./assets/pages/gixxer-sf-150.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -265,7 +265,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer SF 150</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-sf-150.html">Gixxer SF 150</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -276,7 +276,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-250.html">
                                         <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -290,7 +290,7 @@
                                         <!-- <a class="ic-product-quickview ic-modal-btn" title="Quick View"
                                             data-target="#ic-quickview-modal"> -->
                                             <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                            href="shop-single.html">
+                                            href="./assets/pages/gixxer-250.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -302,7 +302,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer 250</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-250.html">Gixxer 250</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-sf-250.html">
                                         <img src="./assets/images/product/motorcycles/gixxer-sf250-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -325,7 +325,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/gixxer-sf-250.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -337,7 +337,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer SF 250</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-sf-250.html">Gixxer SF 250</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
