--- a/assets/pages/gixxer-150.html
+++ b/assets/pages/gixxer-150.html
@@ -166,14 +166,14 @@
                         <div class="ic-product-single-content">
                             <div class="ic-product-item-dec">
                                 <ul>
-                                    <li>250 CC</li>
+                                    <li>155 CC</li>
                                     <!-- <li>Auto</li>
                                     <li>2019</li> -->
                                 </ul>
                             </div>
-                            <h3 class="ic-product-item-title">Gixxer SF 250</h3>
+                            <h3 class="ic-product-item-title">Gixxer 150</h3>
                             <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
-                            <p>The Gixxer SF 250 is a great city motorcycle. It’s comfortable, looks nice and has a motor that is quite potent. Plus, the brakes works really well too. On the corners, the bike is light on its feet, and does emit some great handling characteristics.</p>
+                            <p>Suzuki Gixxer is a street bike available at a starting price of Rs. 1,30,553 in India. It is available in only 1 variant and 3 colours. The Suzuki Gixxer is powered by 155cc BS6 engine which develops a power of 13.41 bhp and a torque of 13.8 Nm. With both front and rear disc brakes, Suzuki Gixxer comes up with anti-locking braking system. This Gixxer bike weighs 141 kg and has a fuel tank capacity of 12 liters.</p>
                             <!-- <div class="ic-product-short-specification">
                                 <ul class="ic-specification-list">
                                     <li><span>Availability:</span>100 items</li>
@@ -192,12 +192,12 @@
                                         </li>
                                         <li>
                                             <input type="radio" name="group1" onclick="color2()">
+                                            <div class="ic-product-color" style="background-color: #F32E45"></div>
+                                        </li>
+                                        <li>
+                                            <input type="radio" name="group1" onclick="color3()">
                                             <div class="ic-product-color" style="background-color: #2F84D8"></div>
                                         </li>
-                                        <!-- <li>
-                                            <input type="radio" name="group1" onclick="color3()">
-                                            <div class="ic-product-color" style="background-color: #F32E45"></div>
-                                        </li> -->
                                         <!-- <li>
                                             <input type="radio" name="group1">
                                             <div class="ic-product-color" style="background-color: #0000AA"></div>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12">
                         <div class="ic-product-thumbnail">
-                            <img class="w-100" src="../images/product/motorcycles/gixxer-sf250-black.png"
+                            <img class="w-100" src="../images/product/motorcycles/gixxer150-black.jpg"
                                 alt="product-thumbnail" id="single-product-img">
                         </div>
                     </div>
@@ -279,14 +279,14 @@
                             <!-- Product description -->
                             <div class="tab-pane fade show active" id="product-desc" role="tabpanel">
                                 <div class="ic-product-desc">
-                                    <p>Suzuki Gixxer SF 250 is a sports bike available at a starting price of Rs. 1,88,534 in India. It is available in 2 variants and 2 colours with top variant price starting from Rs. 1,89,270. The Suzuki Gixxer SF 250 is powered by 249cc BS6 engine which develops a power of 26.13 bhp and a torque of 22.2 Nm. With both front and rear disc brakes, Suzuki Gixxer SF 250 comes up with anti-locking braking system. This Gixxer SF 250 bike weighs 161 kg and has a fuel tank capacity of 12 liters.
+                                    <p>Suzuki Gixxer is a street bike available at a starting price of Rs. 1,30,553 in India. It is available in only 1 variant and 3 colours. The Suzuki Gixxer is powered by 155cc BS6 engine which develops a power of 13.41 bhp and a torque of 13.8 Nm. With both front and rear disc brakes, Suzuki Gixxer comes up with anti-locking braking system. This Gixxer bike weighs 141 kg and has a fuel tank capacity of 12 liters.
                                     </p>
                                     <!-- <h4>Suzuki Gixxer SF Colours & Design</h4> -->
-                                    <p>The Suzuki Gixxer SF 250 is a fully-faired, quarter-litre motorcycle from Suzuki Motorcycle India. The motorcycle from the Indian arm of the Japanese two-wheeler brand is positioned above the Gixxer SF 155.</p>
+                                    <p>The styling of the new Gixxer is profoundly sporty with sharp lines and contours across its body panels. The oblong-shaped headlamp unit houses LED lamp and is surrounded by a brushed silver bezel. The compact tail lamp is also an LED unit while the turn indicators comprise of conventional bulbs. One of the design highlights of the motorcycle is a dual-exhaust canister with chrome-finished tip. Meanwhile, instrumentation on the Gixxer comprises of a white backlit fully digital console.</p>
                                     <!-- <h4>Suzuki Gixxer Mileage & Performance</h4> -->
-                                    <p>The styling cues on the Gixxer SF 250 include a sleek design, a full fairing, split-seats, clip-on handlebars, and slightly rear-set footpegs. The feature list on the motorcycle includes a full LED headlamp unit, an LED taillamp, a fully digital instrument console, dual-barrel exhaust, and split-type grab rails at the rear.</p>
-                                    <p>The mechanical specifications on the Gixxer SF 250 include a BS6-compliant 249cc, four-valve, SOHC, single-cylinder, oil-cooled engine that produces 26.13bhp of power at 9,300rpm and 22.2Nm of peak torque at 7,300rpm. The motor is linked to a six-speed gearbox.</p>
-                                    <p>The hardware on the motorcycle comprises telescopic front forks and a swingarm-mounted rear monoshock to perform the suspension tasks. The Gixxer SF 250 rides on 17-inch alloy wheels that are shod with a 110/70 section tyre at the front and a 150/60 section tyre at the back. The anchoring setup includes disc brakes on both wheels while the safety net includes dual-channel ABS.</p>
+                                    <p>Clinging on to its diamond frame is a 155cc, single-cylinder, fuel-injected engine. This has been reworked to comply with BS6 emission norms which has resulted in a drop in its performance over the BS4 model. Pumping out 13.4bhp and 13.8Nm, it comes mated to a five-speed gearbox. Suspension duties continue to be taken care of by telescopic forks up front and monoshock at the rear while braking is done by disc brakes at both ends equipped with single-channel ABS.</p>
+                                    <p>The 2019 Suzuki Gixxer is offered with the choice of three colour options - Glass Sparkle Black, Metallic Sonic Silver/Glass Sparkle Black, Metallic Triton Blue/ Glass Sparkle Black and the jazzy Pearl Mira Red. In its segment, the new Suzuki Gixxer competes against the Yamaha FZ S V3, Honda CB Hornet 160R and TVS Apache RTR 160 4V.</p>
+
                                 </div>
                             </div>
 
@@ -297,7 +297,7 @@
                                         <h4 class="ic-spec-section-title">Engine and Transmission</h4>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Engine Capacity</div>
-                                            <div class="ic-spec-value">249 cc</div>
+                                            <div class="ic-spec-value">155 cc</div>
                                         </div>
                                         <!-- <div class="ic-spec-row">
                                             <div class="ic-spec-name">Seat Height</div>
@@ -305,7 +305,7 @@
                                         </div> -->
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Max Power</div>
-                                            <div class="ic-spec-value">26.13 bhp @ 9,300 rpm</div>
+                                            <div class="ic-spec-value">13.41 bhp @ 8,000 rpm</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Drive Type</div>
@@ -313,7 +313,7 @@
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Transmission</div>
-                                            <div class="ic-spec-value">6 Speed Manual</div>
+                                            <div class="ic-spec-value">5 Speed Manual</div>
                                         </div>
                                     </div>
                                     <div class="ic-spec-section">
@@ -324,15 +324,15 @@
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Saddle Height</div>
-                                            <div class="ic-spec-value">800 mm</div>
+                                            <div class="ic-spec-value">795 mm</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Wheelbase</div>
-                                            <div class="ic-spec-value">1345 mm</div>
+                                            <div class="ic-spec-value">1335 mm</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Kerb Weight</div>
-                                            <div class="ic-spec-value">161 kg</div>
+                                            <div class="ic-spec-value">141 kg</div>
                                         </div>
                                     </div>
                                 </div>
@@ -360,19 +360,18 @@
             <div class="ic-image-slider-wrapper">
                 <div class="ic-image-slider owl-carousel">
                     <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf250-black.png" alt="image-slider"
+                        <img src="../images/product/motorcycles/gixxer150-black.jpg" alt="image-slider"
                             class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF 250 black</h1>
+                        <h1 class="ic-slider-text animated">Gixxer 150 black</h1>
                     </div>
                     <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf250-blue.png" alt="image-slider"
-                            class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF 250 blue</h1>
+                        <img src="../images/product/motorcycles/gixxer150-red.jpg" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">Gixxer 150 Red</h1>
                     </div>
-                    <!-- <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf-red.webp" alt="image-slider" class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF Red</h1>
-                    </div> -->
+                    <div class="ic-image-slider-item">
+                        <img src="../images/product/motorcycles/gixxer150.png" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">Gixxer 150</h1>
+                    </div>
                 </div>
                 <div class="ic-image-slider-nav">
                     <div class="ic-image-nav-left"><i class="icofont-simple-left"></i></div>
@@ -488,15 +487,15 @@
     <script>
         function color1() {
             document.getElementById('single-product-img').src =
-                "../images/product/motorcycles/gixxer-sf250-black.png"
+                "../images/product/motorcycles/gixxer150-black.jpg"
         }
 
         function color2() {
-            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixxer-sf250-blue.png"
+            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixxer150-red.jpg"
         }
 
         function color3() {
-            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixer-sf-red.webp"
+            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixxer150.png"
         }
     </script>
 
