--- a/shop.html
+++ b/shop.html
@@ -348,7 +348,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-150.html">
                                         <img src="./assets/images/product/motorcycles/gixxer150-red.jpg" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -360,7 +360,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/gixxer-150.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -372,49 +372,14 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer 150</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-150.html">Gixxer 150</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
                             </div>
                         </div>
 
-                        <!-- Product item -->
-                        <!-- <div class="col-lg-4 col-md-6 col-sm-12">
-                            <div class="ic-product-item">
-                                <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
-                                        <img src="./assets/images/product/bike/06.jpg" alt="bike-thumbnail">
-                                    </a>
-                                </div>
-                                <div class="ic-product-content">
-                                    <div class="ic-product-item-action">
-                                        <a class="ic-product-addcart ic-custom-btn-rvs" title="Add To Cart"
-                                            data-bs-toggle="modal" data-bs-target="#ic-success-cart">Add to cart</a>
-                                        <a class="ic-product-wishlist" title="Wishlist" href="#">
-                                            <i class="icofont-heart"></i>
-                                        </a>
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                            data-target="#ic-quickview-modal">
-                                            <i class="icofont-search"></i>
-                                        </a>
-                                    </div>
-                                    <div class="ic-product-content-inner">
-                                        <div class="ic-product-item-dec">
-                                            <ul>
-                                                <li>300 CC</li>
-                                                <li>Auto</li>
-                                                <li>2019</li>
-                                            </ul>
-                                        </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Honda CBR 300R
-                                                2019</a></h3>
-                                        <h4 class="ic-product-item-price">$3,588</h4>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-
+                      
                     </div>
 
                 </div>
@@ -426,7 +391,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/access125.html">
                                         <img src="./assets/images/product/scooters/access-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -438,7 +403,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/access125.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -450,7 +415,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Access 125</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/access125.html">Access 125</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -461,7 +426,7 @@
                       <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/access125-special.html">
                                         <img src="./assets/images/product/scooters/access-specialedition-red.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -473,7 +438,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/access125-special.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -485,7 +450,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Access 125 special Edition</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/access125-special.html">Access 125 special Edition</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -496,7 +461,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/burgman.html">
                                         <img src="./assets/images/product/scooters/burgman-white.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -508,7 +473,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/burgman.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -520,7 +485,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Burgman Street</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/burgman.html">Burgman Street</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -531,7 +496,7 @@
                         <div class="col-lg-4 col-md-6 col-sm-12">
                             <div class="ic-product-item">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/avenis.html">
                                         <img src="./assets/images/product/scooters/avenis-green.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -543,7 +508,7 @@
                                             <i class="icofont-heart"></i>
                                         </a> -->
                                         <a class="ic-product-quickview ic-modal-btn" title="Quick View"
-                                           href="shop-single.html">
+                                           href="./assets/pages/avenis.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -555,7 +520,7 @@
                                                 <li>2019</li> -->
                                             </ul>
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Avenis</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/avenis.html">Avenis</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
