--- a/assets/pages/access125.html
+++ b/assets/pages/access125.html
@@ -166,14 +166,14 @@
                         <div class="ic-product-single-content">
                             <div class="ic-product-item-dec">
                                 <ul>
-                                    <li>250 CC</li>
+                                    <li>124 CC</li>
                                     <!-- <li>Auto</li>
                                     <li>2019</li> -->
                                 </ul>
                             </div>
-                            <h3 class="ic-product-item-title">Gixxer SF 250</h3>
+                            <h3 class="ic-product-item-title">Access 125</h3>
                             <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
-                            <p>The Gixxer SF 250 is a great city motorcycle. It’s comfortable, looks nice and has a motor that is quite potent. Plus, the brakes works really well too. On the corners, the bike is light on its feet, and does emit some great handling characteristics.</p>
+                            <p>The Suzuki Access 125 is among the best 125cc scooters in the Indian market. Its simple yet stylish design, excellent ride quality assisted by the good suspension along with the quick-accelerating engine make it suitable for every kind of rider. Moreover, commendable fuel efficiency makes living with it easier.</p>
                             <!-- <div class="ic-product-short-specification">
                                 <ul class="ic-specification-list">
                                     <li><span>Availability:</span>100 items</li>
@@ -192,20 +192,20 @@
                                         </li>
                                         <li>
                                             <input type="radio" name="group1" onclick="color2()">
-                                            <div class="ic-product-color" style="background-color: #2F84D8"></div>
-                                        </li>
-                                        <!-- <li>
-                                            <input type="radio" name="group1" onclick="color3()">
-                                            <div class="ic-product-color" style="background-color: #F32E45"></div>
-                                        </li> -->
-                                        <!-- <li>
-                                            <input type="radio" name="group1">
-                                            <div class="ic-product-color" style="background-color: #0000AA"></div>
+                                            <div class="ic-product-color" style="background-color: #4A546F"></div>
                                         </li>
                                         <li>
-                                            <input type="radio" name="group1">
-                                            <div class="ic-product-color" style="background-color: #3949D9"></div>
-                                        </li> -->
+                                            <input type="radio" name="group1" onclick="color3()">
+                                            <div class="ic-product-color" style="background-color: #69615E"></div>
+                                        </li>
+                                        <li>
+                                            <input type="radio" name="group1" onclick="color4()">
+                                            <div class="ic-product-color" style="background-color: #2B2F3B"></div>
+                                        </li>
+                                        <li>
+                                            <input type="radio" name="group1" onclick="color5()">
+                                            <div class="ic-product-color" style="background-color: #fff"></div>
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="col-lg-7 col-md-12">
                         <div class="ic-product-thumbnail">
-                            <img class="w-100" src="../images/product/motorcycles/gixxer-sf250-black.png"
+                            <img class="w-100" src="../images/product/scooters/access-black.png"
                                 alt="product-thumbnail" id="single-product-img">
                         </div>
                     </div>
@@ -279,14 +279,15 @@
                             <!-- Product description -->
                             <div class="tab-pane fade show active" id="product-desc" role="tabpanel">
                                 <div class="ic-product-desc">
-                                    <p>Suzuki Gixxer SF 250 is a sports bike available at a starting price of Rs. 1,88,534 in India. It is available in 2 variants and 2 colours with top variant price starting from Rs. 1,89,270. The Suzuki Gixxer SF 250 is powered by 249cc BS6 engine which develops a power of 26.13 bhp and a torque of 22.2 Nm. With both front and rear disc brakes, Suzuki Gixxer SF 250 comes up with anti-locking braking system. This Gixxer SF 250 bike weighs 161 kg and has a fuel tank capacity of 12 liters.
+                                    <p>Suzuki Access 125 is a scooter available at a starting price of Rs. 77,191 in India. It is available in 6 variants and 14 colours with top variant price starting from Rs. 86,650. The Suzuki Access 125 is powered by 124cc BS6 engine which develops a power of 8.6 bhp and a torque of 10 Nm. With both front and rear drum brakes, Suzuki Access 125 comes up with combined braking system of both wheels. This Access 125 scooter weighs 104 kg and has a fuel tank capacity of 5 liters.
                                     </p>
                                     <!-- <h4>Suzuki Gixxer SF Colours & Design</h4> -->
-                                    <p>The Suzuki Gixxer SF 250 is a fully-faired, quarter-litre motorcycle from Suzuki Motorcycle India. The motorcycle from the Indian arm of the Japanese two-wheeler brand is positioned above the Gixxer SF 155.</p>
+                                    <p>The 2020 Suzuki Access 125 gets a number of updates that set it apart from the previous model. To begin with, Suzuki has equipped the new Access 125 with some more features that add value to the overall package. The scooter gets an external fuel-filler cap, USB charging socket and a voltage meter that indicates battery status.</p>
                                     <!-- <h4>Suzuki Gixxer Mileage & Performance</h4> -->
-                                    <p>The styling cues on the Gixxer SF 250 include a sleek design, a full fairing, split-seats, clip-on handlebars, and slightly rear-set footpegs. The feature list on the motorcycle includes a full LED headlamp unit, an LED taillamp, a fully digital instrument console, dual-barrel exhaust, and split-type grab rails at the rear.</p>
-                                    <p>The mechanical specifications on the Gixxer SF 250 include a BS6-compliant 249cc, four-valve, SOHC, single-cylinder, oil-cooled engine that produces 26.13bhp of power at 9,300rpm and 22.2Nm of peak torque at 7,300rpm. The motor is linked to a six-speed gearbox.</p>
-                                    <p>The hardware on the motorcycle comprises telescopic front forks and a swingarm-mounted rear monoshock to perform the suspension tasks. The Gixxer SF 250 rides on 17-inch alloy wheels that are shod with a 110/70 section tyre at the front and a 150/60 section tyre at the back. The anchoring setup includes disc brakes on both wheels while the safety net includes dual-channel ABS.</p>
+                                    <p>The latest iteration of the Access 125 also gets Bluetooth enabled instrument cluster which was introduced in October 2020. The console connects with the rider’s smartphone though Suzuki Ride Connect application and gives access to turn-by-turn navigation, estimated time of arrival updates, message notification (incoming calls, WhatsApp and SMS), missed call alert, caller ID, phone battery level, and overspeed warning. Owners can also get the last parked location and share the trip information using the app.</p>
+                                    <p>The new Access 125 offers more comfort in the form of a longer seat, more under seat storage and a larger floorboard. The Access retains the same design of the previous model and features flowing lines all through its bodywork. However, the scooter now boasts of a full-LED headlamp in place of the conventional unit. Suzuki is offering the Access 125 in five colour schemes - Pearl Deep Blue, Metallic Matte Platinum Silver, Pearl Mirage White, Glass Sparkle Black and Metallic Matte Fibroin Grey shades. On the other hand, the Special Edition models are offered in Metallic Matte Bordeaux Red, Metallic Dark Greenish Blue, Metallic Matte Black and Pearl Mirage White paint options. Apart from this, the scooter remains the same visually.</p>
+                                    <p>The Suzuki Access 125 continues to be powered by a 124cc, air-cooled engine which is now fuel-injected. The BS6-compliant engine puts out 8.5bhp of power and 10Nm of torque; an increase of 0.1bhp and a drop of 0.2Nm as compared to the previous model. It also comes with an ‘Eco Assist’ light integrated in the semi-analogue instrument cluster that glows when the Access 125 is ridden in a fuel-efficient manner.</p>
+                                
                                 </div>
                             </div>
 
@@ -297,7 +298,7 @@
                                         <h4 class="ic-spec-section-title">Engine and Transmission</h4>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Engine Capacity</div>
-                                            <div class="ic-spec-value">249 cc</div>
+                                            <div class="ic-spec-value">124 cc</div>
                                         </div>
                                         <!-- <div class="ic-spec-row">
                                             <div class="ic-spec-name">Seat Height</div>
@@ -305,34 +306,34 @@
                                         </div> -->
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Max Power</div>
-                                            <div class="ic-spec-value">26.13 bhp @ 9,300 rpm</div>
+                                            <div class="ic-spec-value">8.6 bhp</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Drive Type</div>
-                                            <div class="ic-spec-value">Chain Drive</div>
+                                            <div class="ic-spec-value">CVT</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Transmission</div>
-                                            <div class="ic-spec-value">6 Speed Manual</div>
+                                            <div class="ic-spec-value">Automatic</div>
                                         </div>
                                     </div>
                                     <div class="ic-spec-section">
                                         <h4 class="ic-spec-section-title">Dimensions and Capacity</h4>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Fuel Capacity</div>
-                                            <div class="ic-spec-value">12 L</div>
+                                            <div class="ic-spec-value">5 L</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Saddle Height</div>
-                                            <div class="ic-spec-value">800 mm</div>
+                                            <div class="ic-spec-value">773 mm</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Wheelbase</div>
-                                            <div class="ic-spec-value">1345 mm</div>
+                                            <div class="ic-spec-value">1265 mm</div>
                                         </div>
                                         <div class="ic-spec-row">
                                             <div class="ic-spec-name">Kerb Weight</div>
-                                            <div class="ic-spec-value">161 kg</div>
+                                            <div class="ic-spec-value">104 kg</div>
                                         </div>
                                     </div>
                                 </div>
@@ -360,19 +361,26 @@
             <div class="ic-image-slider-wrapper">
                 <div class="ic-image-slider owl-carousel">
                     <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf250-black.png" alt="image-slider"
+                        <img src="../images/product/scooters/access-black.png" alt="image-slider"
                             class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF 250 black</h1>
+                        <h1 class="ic-slider-text animated">access 125 black</h1>
                     </div>
                     <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf250-blue.png" alt="image-slider"
-                            class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF 250 blue</h1>
+                        <img src="../images/product/scooters/access-blue.png" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">access 125 blue</h1>
                     </div>
-                    <!-- <div class="ic-image-slider-item">
-                        <img src="../images/product/motorcycles/gixxer-sf-red.webp" alt="image-slider" class="animated">
-                        <h1 class="ic-slider-text animated">Gixxer SF Red</h1>
-                    </div> -->
+                    <div class="ic-image-slider-item">
+                        <img src="../images/product/scooters/access-brown.png" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">access 125 brown</h1>
+                    </div>
+                    <div class="ic-image-slider-item">
+                        <img src="../images/product/scooters/access-gray.png" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">access 125 gray</h1>
+                    </div>
+                    <div class="ic-image-slider-item">
+                        <img src="../images/product/scooters/access-white.png" alt="image-slider" class="animated">
+                        <h1 class="ic-slider-text animated">access 125 white</h1>
+                    </div>
                 </div>
                 <div class="ic-image-slider-nav">
                     <div class="ic-image-nav-left"><i class="icofont-simple-left"></i></div>
@@ -488,15 +496,21 @@
     <script>
         function color1() {
             document.getElementById('single-product-img').src =
-                "../images/product/motorcycles/gixxer-sf250-black.png"
+                "../images/product/scooters/access-black.png"
         }
 
         function color2() {
-            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixxer-sf250-blue.png"
+            document.getElementById('single-product-img').src = "../images/product/scooters/access-blue.png"
         }
 
         function color3() {
-            document.getElementById('single-product-img').src = "../images/product/motorcycles/gixer-sf-red.webp"
+            document.getElementById('single-product-img').src = "../images/product/scooters/access-brown.png"
+        }
+        function color4() {
+            document.getElementById('single-product-img').src = "../images/product/scooters/access-gray.png"
+        }
+        function color5() {
+            document.getElementById('single-product-img').src = "../images/product/scooters/access-white.png"
         }
     </script>
 
