--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-250.html">
                                         <img src="./assets/images/product/motorcycles/gixer250-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -351,13 +351,13 @@
                                         <!-- <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/gixxer-250.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
                                     <div class="ic-product-content-inner">
                                        
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer 250</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-250.html">Gixxer 250</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -366,7 +366,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp" data-wow-delay="=0.3s">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-sf-150.html">
                                         <img src="./assets/images/product/motorcycles/gixxer-sf-150.webp" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -376,7 +376,7 @@
                                         <!-- <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/gixxer-sf-150.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -388,7 +388,7 @@
                                                 <li>2019</li>
                                             </ul>
                                         </div> -->
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer SF 150</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-sf-150.html">Gixxer SF 150</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -399,7 +399,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-sf-250.html">
                                         <img src="./assets/images/product/motorcycles/gixxer-sf250-blue.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -409,7 +409,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/gixxer-sf-250.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -421,7 +421,7 @@
                                                 <li>2019</li>
                                             </ul>
                                         </div> -->
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer SF 250</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-sf-250.html">Gixxer SF 250</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -430,7 +430,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp" data-wow-delay="=0.3s">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/gixxer-150.html">
                                         <img src="./assets/images/product/motorcycles/gixxer150-black.jpg" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -440,7 +440,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/gixxer-150.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -452,7 +452,7 @@
                                                 <li>2019</li>
                                             </ul>
                                         </div> -->
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Gixxer 150</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/gixxer-150.html">Gixxer 150</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -463,7 +463,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/vstrom-sx.html">
                                         <img src="./assets/images/product/motorcycles/suzuki-sx-orange-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -473,7 +473,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/vstrom-sx.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -485,7 +485,7 @@
                                                 <li>2019</li>
                                             </ul>
                                         </div> -->
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Vstrom SX</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/vstrom-sx.html">Vstrom SX</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -494,7 +494,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp" data-wow-delay="=0.3s">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/access125.html">
                                         <img src="./assets/images/product/scooters/access-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -504,7 +504,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/access125.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -516,7 +516,7 @@
                                                 <li>2019</li>
                                             </ul> -->
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Access 125</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/access125.html">Access 125</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -527,7 +527,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/access125-special.html">
                                         <img src="./assets/images/product/scooters/access-specialedition-black.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -537,7 +537,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/access125-special.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -549,7 +549,7 @@
                                                 <li>2019</li>
                                             </ul> -->
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Access 125(Special Edition)</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/access125-special.html">Access 125(Special Edition)</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -558,7 +558,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp" data-wow-delay="=0.3s">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/avenis.html">
                                         <img src="./assets/images/product/scooters/avenis-green.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -568,7 +568,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/avenis.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -580,7 +580,7 @@
                                                 <li>2019</li>
                                             </ul> -->
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Avenis</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/avenis.html">Avenis</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
@@ -591,7 +591,7 @@
                             <!-- Product item -->
                             <div class="ic-product-item wow fadeInUp">
                                 <div class="ic-product-thumbnail">
-                                    <a href="shop-single.html">
+                                    <a href="./assets/pages/burgman.html">
                                         <img src="./assets/images/product/scooters/burgman-red.png" alt="bike-thumbnail">
                                     </a>
                                 </div>
@@ -601,7 +601,7 @@
                                         <a class="ic-product-wishlist" title="Wishlist" href="wishlist.html">
                                             <i class="icofont-heart"></i>
                                         </a> -->
-                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="shop-single.html">
+                                        <a class="ic-product-quickview ic-modal-btn" title="Quick View" href="./assets/pages/burgman.html">
                                             <i class="icofont-search"></i>
                                         </a>
                                     </div>
@@ -613,7 +613,7 @@
                                                 <li>2019</li>
                                             </ul> -->
                                         </div>
-                                        <h3 class="ic-product-item-title"><a href="shop-single.html">Burgman Street</a></h3>
+                                        <h3 class="ic-product-item-title"><a href="./assets/pages/burgman.html">Burgman Street</a></h3>
                                         <!-- <h4 class="ic-product-item-price">$3,588</h4> -->
                                     </div>
                                 </div>
